tests/snapshots/run_wpt_conformance__litert_add_float32_large_inputs.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float32 large inputs",
    "litert",
    "PASS",
)
